test/ui/test/packages/invalid-component-types/package.metadata
# TEST fail check

name: what,
version: "99.99.991",

components: {
    alpha: {
        type: examples,
        path: "examples/first.lushui",
    },
    beta: {
        type: "tes t#",
        path: "tests/first.lushui",
    },
},
