test/ui/test/packages/invalid-component-types/package.stderr
error: ‘examples’ is not a valid component type
  ┌─ ${TEST_FOLDER}/packages/invalid-component-types/package.metadata:7:15
  │
7 │         type: examples,
  │               ════════
  │
 note: valid component types are ‘benchmark-suite’, ‘example’, ‘executable’, ‘library’ and ‘test-suite’

error: ‘tes t#’ is not a valid component type
   ┌─ ${TEST_FOLDER}/packages/invalid-component-types/package.metadata:11:16
   │
11 │         type: "tes t#",
   │                ══════
   │
  note: valid component types are ‘benchmark-suite’, ‘example’, ‘executable’, ‘library’ and ‘test-suite’

error: aborting due to 2 previous errors

